2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/bookmarks/ephy-bookmarks-editor.c (cmd_bookmarks_export) 

	Add back the gtk_widget_destroy() to really fix bug #327438

2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>

	* src/bookmarks/ephy-bookmarks-editor.c (cmd_bookmarks_export) 

	Fix bookmark exporting, so that it can be cancelled. 
	Fixes bug #327438

2006-01-21  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Add licence to about dialogue. Patch by Brian Pepple,
	bug #327998.

2006-01-18  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (impl_get_embed_single):
	* embed/ephy-embed-single.c: (ephy_embed_single_init):
	* embed/ephy-embed-single.h:
	* embed/mozilla/mozilla-embed-single.cpp:

	Decouple embed single instantiation and initialisation.
	Prevents double-initialisation on startup.

	* embed/mozilla/EphyContentPolicy.cpp:
	* embed/mozilla/EphyContentPolicy.h:

	Remove embed single variable, it was unused.

2006-01-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-statusbar.c: (create_caret_indicator),
	(ephy_statusbar_init), (ephy_statusbar_new),
	(ephy_statusbar_set_caret_mode):
	* src/ephy-statusbar.h:
	* src/ephy-window.c: (browse_with_caret_notifier):

	Add caret mode indicator UI. Bug #145581.

2006-01-18  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks-menu.c
	
	Do not add OpenTabs action if too-few items in the menu.
	Bug #327390.

2006-01-18  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	
	Removed inappropriate bold and mnemonic.
	Bug #327401.

2006-01-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/prefs-dialog.c: (row_is_separator), (setup_fonts_dialog),
	(create_autodetectors_combo), (prefs_dialog_init):
	
	Put "Off" at the top of the combo, followed by a separator row.
	Bug #125723.

2006-01-17  Crispin Flowerday  <gnome@flowerday.cx>
