@@ -1,3 +1,9 @@
+2006-01-21  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/window-commands.c: (window_cmd_help_about):
+
+	Fix the previous commit.
+
 2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* src/bookmarks/ephy-bookmarks-editor.c (cmd_bookmarks_export) 
